src/objects/DeploymentEvent__e.object
<CustomObject>
    <label>Deployment Event</label>
    <pluralLabel>DeploymentEvent</pluralLabel>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeploymentId__c</fullName>
        <label>Deployment ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>